Fix CSS media query by specifying the container class for proper padding on smaller screens

--- a/style.css
+++ b/style.css
@@ -1597,7 +1597,7 @@ footer .social-icons a:hover i {
 }
 
 @media (max-width: 1024px) {
-  . {
+  .container {
     padding: 100px 20px;
   }
 
